@@ -16,10 +16,12 @@
  */
 package mettel.generator.java;
 
+import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.LineNumberReader;
 import java.io.PrintWriter;
-
 import mettel.util.MettelJavaNames;
 import mettel.util.MettelIndentedStringBuilder;
 
@@ -76,19 +78,52 @@ public class MettelFile extends MettelIndentedStringBuilder{
 	}
 */
 
+	private String[] header = {
+			"/**",
+			" * This file is generated by MetTeL v2",
+			" * which is designed and implemented",
+			" * by Dmitry Tishkovsky.",
+			" */"
+	};
+
+	private int isGenerated(String path){
+
+		int result = 0;
+
+		try{
+			LineNumberReader r = new LineNumberReader(new FileReader(path));
+			try{
+				for(String s:header){
+					if(!s.equals(r.readLine())){
+						result = 1;
+						break;
+					}
+				}
+			}finally{
+				r.close();
+			}
+		}catch(FileNotFoundException e){
+			return -1;
+		}catch(IOException e){
+			return 2;
+		}
+
+		return result;
+	}
+
 	public void flush(String outputPath) throws IOException {
-		PrintWriter w = new PrintWriter(
-				new FileWriter(
-						MettelJavaNames.addSeparator(outputPath) +
-						MettelJavaNames.addSeparator(MettelJavaNames.systemPath(pack != null ? pack.path() : "" )) + fileName +
-						((extension == null || extension.equals(""))? "": "." + extension)));
-		w.println("/**");
-		w.println(" * This file is generated by MetTeL v2");
-		w.println(" * which is designed and implemented");
-		w.println(" * by Dmitry Tishkovsky.");
-		w.println(" */");
-		w.print(toString());
-		w.close();
+		final String fileFullName = MettelJavaNames.addSeparator(outputPath) +
+				MettelJavaNames.addSeparator(MettelJavaNames.systemPath(pack != null ? pack.path() : "" )) + fileName +
+				((extension == null || extension.equals(""))? "": "." + extension);
+
+		if(isGenerated(fileFullName) <= 0){
+			PrintWriter w = new PrintWriter(new FileWriter(fileFullName));
+			for(String s:header) w.println(s);
+			w.print(toString());
+			w.close();
+		}else{
+			System.out.println("Warning: skipping the file " + fileFullName + ".");
+		}
 	}
 
 }
