@@ -1,3 +1,5 @@
+31/03/2013 Check for overwrite of generated files
+
 04/02/2013 Intuitionistic logic case study
 
 28/01/2013 Random expression generator with depth restrictions, variable names, and frequencies of connectives
